tests/invalid/method_param_missing_annotation/main.py
class Foo:
    x: int

    def __init__(self, x) -> None:
        self.x = x
